--- a/TrabajosPracticos123/TrabajosPracticos123.csproj
+++ b/TrabajosPracticos123/TrabajosPracticos123.csproj
@@ -60,6 +60,12 @@
     <Compile Include="TPractico1\Practico1.Designer.cs">
       <DependentUpon>Practico1.cs</DependentUpon>
     </Compile>
+    <Compile Include="TPractico2\Practico2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TPractico2\Practico2.Designer.cs">
+      <DependentUpon>Practico2.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -71,6 +77,9 @@
     </Compile>
     <EmbeddedResource Include="TPractico1\Practico1.resx">
       <DependentUpon>Practico1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TPractico2\Practico2.resx">
+      <DependentUpon>Practico2.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -85,8 +94,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TPractico2\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
