--- a/TrabajosPracticos123/TrabajosPracticos123.csproj
+++ b/TrabajosPracticos123/TrabajosPracticos123.csproj
@@ -60,6 +60,12 @@
     <Compile Include="TPractico2\Practico2.Designer.cs">
       <DependentUpon>Practico2.cs</DependentUpon>
     </Compile>
+    <Compile Include="TPractico3\Practico3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TPractico3\Practico3.Designer.cs">
+      <DependentUpon>Practico3.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TPractico2\Practico2.resx">
       <DependentUpon>Practico2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TPractico3\Practico3.resx">
+      <DependentUpon>Practico3.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
